sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  { var change=false
            do{
              for (i<-0 to getNombreValeurs-2)
              {if (!plusPetit (i,i+1)  )
                   {echange(i,j)
                    change=true}}
              
            }       
}